--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ httpx==0.26.0
 idna==3.6
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+pika==1.3.2
 pydantic==2.6.0
 pydantic_core==2.16.1
 python-dotenv==1.0.1
